          in autodie documentation for more details.

        * FEATURE: Stringified exceptions from flock() are significantly
          nicer to read.

        * FEATURE: use autodie qw(:1.994) can be used to specify the
          :default tag from a particular version.

        * TEST: New tests for rmdir(), mkdir(), and unlink(), thanks
          to Jacinta Richardson.

        * DOCUMENTATION: flock() is documented as being in the :file tag.

1.993 Sun Sep 14 11:15:36 AUSEST 2008

        * DOCUMENTATION: The :dbm tag is now correctly documented
          in autodie/CATEGORIES.  Thanks to Darren Duncan for spotting
          this.  (RT #39172)

        * DOCUMENTATION: The README file has been updated to reflect
          current minimum Perl versions (5.8.0) and current resources.

        * DOCUMENTATION: The closedir() function is properly
          documented as being included in the :filesys tag.

        * DOCUMENTATION: Feedback section added to the autodie
          documentation.  If you find the module useful, consider
          saying so on cpanratings.perl.org, or dropping me a note.

        * BUILD: Upgrade to Module::Intstall 0.77

1.992 Sun Sep  7 15:51:32 AUSEST 2008

        * BUGFIX: unlink(), rename(), chdir() and closedir() functions
          are now included in the :filesys tag.

        * BUGFIX: binmode() is now checked for failure as part of
          the :file tag.

        * BUGFIX: Using an unopened filehandle in an autodying
          built-in no longer triggers a spurious warning.

        * BUGFIX: RT #38845, corrected a missing space in the error
          produced by autodie when called with the ':void' switch.
          Many thanks to Matt Kraai for the patch!

        * FEATURE: The dbmopen() and dbmclose() functions are now
          supported in their own :dbm tag.  This is part of :io
          (and hence :default).

        * FEATURE: The dbmopen() built-in has its own formatter,