@@ -39,6 +39,8 @@ Revision history for autodie
         * TEST: New tests for rmdir(), mkdir(), and unlink(), thanks
           to Jacinta Richardson.
 
+        * TEST: Added author-only perlcritic tests.
+
         * DOCUMENTATION: flock() is documented as being in the :file tag.
 
 1.993 Sun Sep 14 11:15:36 AUSEST 2008
